--- a/HJ/201222_Naver_AI부스트캠프_1차.ipynb
+++ b/HJ/201222_Naver_AI부스트캠프_1차.ipynb
@@ -3,50 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T10:25:46.296619Z",
-     "start_time": "2020-12-22T10:25:46.286614Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 2, 2, 1, 1, 3, 3]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "#2번\n",
     "arr=[1, 1, 3, 3, 2, 2, 4, 5, 1, 1, 1, 3, 3, 3]\t\n",
@@ -75,40 +57,29 @@
     "        if tmp==[1]:break\n",
     "    return i\n",
     "solution([2, 2, 1, 1, 2, 2, 1, 1, 2, 2, 2, 1, 2])"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 2, 2, 1, 1, 3, 3]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T10:25:46.296619Z",
+     "start_time": "2020-12-22T10:25:46.286614Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T10:16:18.829322Z",
-     "start_time": "2020-12-22T10:16:18.823015Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1 \t 0 0 \t 0\n",
-      "1 2 \t 1 4 \t 1\n",
-      "2 3 \t 1 4 \t 2\n",
-      "3 4 \t 1 4 \t 3\n",
-      "4 5 \t 1 4 \t 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 3번\n",
     "now=1\n",
@@ -123,41 +94,45 @@
     "    now=dest\n",
     "#     print(now,dest,'\\t',a,b,'\\t',ans)\n",
     "ans"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 1 \t 0 0 \t 0\n",
+      "1 2 \t 1 4 \t 1\n",
+      "2 3 \t 1 4 \t 2\n",
+      "3 4 \t 1 4 \t 3\n",
+      "4 5 \t 1 4 \t 4\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T10:16:18.829322Z",
+     "start_time": "2020-12-22T10:16:18.823015Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T11:58:55.793292Z",
-     "start_time": "2020-12-22T11:58:55.776577Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{2, 6, 24}"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 4번\n",
     "def solution(n):\n",
@@ -178,55 +153,62 @@
     "\n",
     "    return dp\n",
     "solution(2)\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{2, 6, 24}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 135
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T11:58:55.793292Z",
+     "start_time": "2020-12-22T11:58:55.776577Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T10:53:19.200538Z",
-     "start_time": "2020-12-22T10:53:19.196530Z"
-    }
-   },
+   "source": [
+    "for i in range(1,1):\n",
+    "    print(i==0)\n"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "123"
       ]
      },
-     "execution_count": 62,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 62
     }
    ],
-   "source": [
-    "for i in range(1,1):\n",
-    "    print(i==0)\n"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T10:53:19.200538Z",
+     "start_time": "2020-12-22T10:53:19.196530Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T11:11:04.003661Z",
-     "start_time": "2020-12-22T11:11:03.988303Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 5번\n",
     "def sol(n):\n",
@@ -240,29 +222,29 @@
     "    return answer\n",
     "sol(10)\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 101
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T11:11:04.003661Z",
+     "start_time": "2020-12-22T11:11:03.988303Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T11:08:46.286122Z",
-     "start_time": "2020-12-22T11:08:46.267566Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1'"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "def mkbin(n):\n",
     "    tmp=''\n",
@@ -274,59 +256,75 @@
     "    return tmp\n",
     "# divmod(5,2)\n",
     "mkbin(1)#.count('1')\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 98
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T11:08:46.286122Z",
+     "start_time": "2020-12-22T11:08:46.267566Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T11:03:45.416695Z",
-     "start_time": "2020-12-22T11:03:45.403358Z"
-    }
-   },
+   "source": [
+    "mkbin(5)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "1\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'211'"
       ]
      },
-     "execution_count": 78,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 78
     }
    ],
-   "source": [
-    "mkbin(5)"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T11:03:45.416695Z",
+     "start_time": "2020-12-22T11:03:45.403358Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 6 번"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "nums=[4, 1, 2, 3, 1, 0, 5]\t\n",
     "def mkgraph(nums):\n",
@@ -339,13 +337,13 @@
     "            tmp.append()\n",
     "        else:\n",
     "            dic[i]=[i+num]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "nums=[4, 1, 2, 3, 1, 0, 5]\t\n",
     "def mkgraph(nums):\n",
@@ -371,45 +369,16 @@
     "            elif up<len(nums):\n",
     "                dic[i]=nums[up]\n",
     "            elif down>0:\n",
-    "                dic[i]=num[down]\n",
+    "                dic[i]=nums[down]\n",
     "                \n",
-    "        i=i+"
-   ]
+    "        i=i+1"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-22T12:08:55.801888Z",
-     "start_time": "2020-12-22T12:08:55.793057Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 \t [4] 4 -4\n",
-      "2 \t [5, 3] 5 3\n",
-      "3 \t [5, 6] 6 0\n",
-      "4 \t [5, 1] 11 1\n",
-      "5 \t [5, 2] 2 0\n",
-      "6 \t [5, 6] 6 -2\n",
-      "8 \t [5, 5] 5 5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "#6번\n",
     "def solution(nums):\n",
@@ -436,35 +405,66 @@
     "    return -1\n",
     "solution([4, 1, 4, 3, 1, 0, 5, 1])    \n",
     "#         0  1  2  3  4  5  6  7"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 \t [4] 4 -4\n",
+      "2 \t [5, 3] 5 3\n",
+      "3 \t [5, 6] 6 0\n",
+      "4 \t [5, 1] 11 1\n",
+      "5 \t [5, 2] 2 0\n",
+      "6 \t [5, 6] 6 -2\n",
+      "8 \t [5, 5] 5 5\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-22T12:08:55.801888Z",
+     "start_time": "2020-12-22T12:08:55.793057Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
