--- a/HJ/Algorithm/Dijkstra.ipynb
+++ b/HJ/Algorithm/Dijkstra.ipynb
@@ -27,19 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[1000000000, 0, 2, 3, 1, 2, 4]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
    "source": [
     "def dijkstra(graph,start):\n",
     "    import heapq\n",
@@ -71,13 +58,24 @@
     "    [1,2,2],[1,4,1],[1,3,5],[2,3,3],[2,4,2],[3,2,3],[3,6,5],[4,3,3],[4,5,1],[5,3,1],[5,6,2]\n",
     "]\n",
     "dijkstra(mkgraph(costs),1)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1000000000, 0, 2, 3, 1, 2, 4]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from heapq import *\n",
     "def dijkstra(graph,start):\n",
@@ -110,7 +108,33 @@
     "graph = mkgraph(costs)\n",
     "dist, frtable = dijkstra(graph,1)\n",
     "getRoute(frtable,1,5)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "def dijkstra(graph,start):\n",
+    "    INF=int(1e9)\n",
+    "    distances={i:INF for i in graph}\n",
+    "    frt={i:0 for i in graph}\n",
+    "    distances[start]=0\n",
+    "    frt[start]=start\n",
+    "    q = [[0,start]]\n",
+    "    while q:\n",
+    "        dist,now=heappop(q)\n",
+    "        for node , n_dist in graph[now]:\n",
+    "            new_dist=dist+n_dist\n",
+    "            if new_dist<distances[node]:\n",
+    "                distances[node]=new_dist\n",
+    "                frt[node]=now\n",
+    "                heappush(q, [new_dist,node])\n",
+    "    return distances,frt"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ]
 }
