--- a/HJ/Algorithm/Topology_Sort.ipynb
+++ b/HJ/Algorithm/Topology_Sort.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
     "from collections import deque\n",
     "# Topology Sort (위상정렬)\n",
@@ -38,21 +36,50 @@
     "    return indegree, graph\n",
     "\n",
     "\n",
-    "Topology_Sort(nodes,edges)"
-   ]
+    "Topology_Sort(nodes,edges)\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 5, 3, 6, 4, 7]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "([0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " {0: [], 1: [2, 5], 2: [3, 6], 3: [4], 4: [7], 5: [6], 6: [4], 7: []})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
+   "hash": "cb21448086e1b039f0143f4b6f3949a0ab18b782485cd082e49e693fdc0e34f1"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.4 64-bit ('base': conda)"
   },
   "language_info": {
    "name": "python",
-   "version": ""
+   "version": "3.9.4",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "orig_nbformat": 4
  },
