--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1044,9 +1044,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "#음료수얼려먹기\n",
+    "ices=[[0,0,0,1,0],[0,0,0,1,1],[1,1,1,1,1],[0,0,0,0,0]]#구멍 : 0, 칸막이 : 1 -> 얼음 몇개 만들수있는가?\n",
+    "def solution(ices):\n",
+    "    def dfs(ices,i,j):\n",
+    "        visited=[]\n",
+    "        stack=[[i,j]]\n",
+    "        while stack:\n",
+    "            x,y=stack.pop()\n",
+    "            if [x,y] in visited or ices[x][y]==1 : continue\n",
+    "            ices[x][y]=1\n",
+    "            visited.append([x,y])\n",
+    "            for k in range(4):\n",
+    "                nx,ny=x+dx[k], y+dy[k]\n",
+    "                if nx<0 or nx>=n or ny<0 or ny>=m: continue\n",
+    "                stack.append([nx,ny])\n",
+    "\n",
+    "\n",
+    "    global dx,dy,n,m\n",
+    "    dx=[0,0,1,-1]\n",
+    "    dy=[1,-1,0,0]\n",
+    "    n=len(ices)\n",
+    "    m=len(ices[0])\n",
+    "    answer=0\n",
+    "    # print(n,m)\n",
+    "    # dfs(ices,0,0,answer)\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            if ices[i][j]==0:\n",
+    "                dfs(ices,i,j)\n",
+    "                answer+=1\n",
+    "    return answer\n",
+    "\n",
+    "solution(ices)\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "#음료수얼려먹기2\n",
+    "def solution(ices):\n",
+    "    def dfs(ices,i,j):\n",
+    "        if i<0 or i>=n or j<0 or j>=m: return False\n",
+    "        if ices[i][j]==0:\n",
+    "            ices[i][j]=1\n",
+    "            dfs(ices,i+1,j)\n",
+    "            dfs(ices,i-1,j)\n",
+    "            dfs(ices,i,j+1)\n",
+    "            dfs(ices,i,j-1)\n",
+    "            return True\n",
+    "        return False\n",
+    "\n",
+    "    n=len(ices)\n",
+    "    m=len(ices[0])\n",
+    "    answer=0\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            # print(i,j)\n",
+    "            if dfs(ices,i,j):\n",
+    "                print(i,j)\n",
+    "                answer+=1\n",
+    "    return answer\n",
+    "ices=[[0,0,0,1,0],[0,0,0,1,1],[1,1,1,1,1],[0,0,0,0,0]]#구멍 : 0, 칸막이 : 1 -> 얼음 몇개 만들수있는가?\n",
+    "solution(ices)\n",
+    "    "
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0 0\n",
+      "0 4\n",
+      "3 0\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "source": [
+    "float('INF')<0"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "source": [
+    "from heapq import *\n",
+    "# begin\ttarget\twords\treturn\n",
+    "# begin,target,words= \"hit\", \"cog\", [\"hot\", \"dot\", \"dog\", \"lot\", \"log\", \"cog\"] #4\n",
+    "begin,target,words=\"hit\",\"cog\",[\"hot\", \"dot\", \"dog\", \"lot\", \"log\"] #0\n",
+    "def solution(begin,target,words):\n",
+    "    def getDiffCnt(w1,w2):\n",
+    "        return len(list(filter(lambda x:x[0]!=x[1] ,zip(w1,w2))))\n",
+    "    def mktree(begin,target,words):\n",
+    "        dic={begin:[],target:[]}\n",
+    "        for word in words:\n",
+    "            dic[word]=[]\n",
+    "        for k in dic:\n",
+    "            dic[k].extend([i for i in dic.keys() if getDiffCnt(i,k)==1])\n",
+    "        return dic\n",
+    "    def dijkstra(graph,start):\n",
+    "        dist={i:float('inf') for i in graph.keys()}\n",
+    "        prnt={i:0 for i in graph.keys()}\n",
+    "        visited=[]\n",
+    "        hq=[[0,start,start]]\n",
+    "        while hq:\n",
+    "            d,now,pnt = heappop(hq)\n",
+    "            if now in visited: continue\n",
+    "            visited.append(now)\n",
+    "            dist[now]=d\n",
+    "            prnt[now]=pnt\n",
+    "            for i in graph[now]:\n",
+    "                newdist=d+1\n",
+    "                if newdist<dist[i]:\n",
+    "                    heappush(hq,[newdist,i,now])\n",
+    "        return dist,prnt\n",
+    "    # if target not in words : return 0\n",
+    "    graph=mktree(begin,target,words)\n",
+    "    print(graph)\n",
+    "    dists,parent= dijkstra(graph,begin)\n",
+    "    print(dists)\n",
+    "    print(parent)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return dists.get(target)\n",
+    "\n",
+    "    \n",
+    "        \n",
+    "\n",
+    "solution(begin,target,words)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'hit': ['hot'], 'cog': ['dog', 'log'], 'hot': ['hit', 'dot', 'lot'], 'dot': ['hot', 'dog', 'lot'], 'dog': ['cog', 'dot', 'log'], 'lot': ['hot', 'dot', 'log'], 'log': ['cog', 'dog', 'lot']}\n",
+      "{'hit': 0, 'cog': 4, 'hot': 1, 'dot': 2, 'dog': 3, 'lot': 2, 'log': 3}\n",
+      "{'hit': 'hit', 'cog': 'dog', 'hot': 'hit', 'dot': 'hot', 'dog': 'dot', 'lot': 'hot', 'log': 'lot'}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 82
+    }
+   ],
    "metadata": {}
   },
   {
