--- a/HJ/Algorithm/Union_Find_Algorithm.ipynb
+++ b/HJ/Algorithm/Union_Find_Algorithm.ipynb
@@ -15,10 +15,10 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3.8.5 64-bit ('codestates': conda)"
   },
   "interpreter": {
-   "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
+   "hash": "66725da8cd7a014ad20077260537a77858d60878c0d94adc7d9ed308e4bb2094"
   }
  },
  "nbformat": 4,
@@ -27,26 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 2, 2, 2, 2, 2, 2, 8]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
    "source": [
     "MAX_SIZE = 10\n",
     "\n",
@@ -84,14 +64,34 @@
     "union(8,2)\n",
     "parent \n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 2, 2, 2, 2, 2, 2, 8]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ]
 }
