--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1267,9 +1267,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 9,
+   "source": [
+    "# sizes=[[60, 50], [30, 70], [60, 30], [80, 40]]\t\n",
+    "sizes=[[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]\t\n",
+    "def solution(sizes=sizes):\n",
+    "    sizes=[sorted(i) for i in sizes]\n",
+    "    sizes=sorted(sizes, key=lambda x :x[1], reverse=True)\n",
+    "    x=sizes[0][1]\n",
+    "    print(sizes)\n",
+    "    y=0\n",
+    "    for i in sizes:\n",
+    "        y = max(y, i[0])\n",
+    "    return x*y\n",
+    "solution()\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[8, 15], [5, 15], [7, 14], [3, 12], [7, 10]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "# n,wires=9,[[1,3],[2,3],[3,4],[4,5],[4,6],[4,7],[7,8],[7,9]]\n",
+    "n,wires=7,[[1,2],[2,7],[3,7],[3,4],[4,5],[6,7]]\n",
+    "def solution(n,wires):\n",
+    "    global parent\n",
+    "    graph={i+1:[] for i in range(n)}\n",
+    "    parent=[i for i in range(n+1)]\n",
+    "    # tmp=find(1)\n",
+    "    # print(graph,tmp)\n",
+    "    for a,b in wires:\n",
+    "        union(a,b)\n",
+    "        graph[a].append(b)\n",
+    "        graph[b].append(a)\n",
+    "    print(parent)\n",
+    "    print(graph)\n",
+    "\n",
+    "def find(x):\n",
+    "    if x == parent[x]:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return find(parent[x])\n",
+    "        # parent[x]= find(parent[x])\n",
+    "        # return parent[x]\n",
+    "\n",
+    "def union(a,b):\n",
+    "    a=find(a)\n",
+    "    b=find(b)\n",
+    "    if a==b: return\n",
+    "    if a<b:\n",
+    "        parent[b]=a\n",
+    "    else:\n",
+    "        parent[a]=b\n",
+    "\n",
+    "print([i for i in range(n+1)])\n",
+    "solution(n,wires)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
+      "[0, 1, 1, 1, 1, 1, 1, 1]\n",
+      "{1: [2], 2: [1, 7], 3: [7, 4], 4: [3, 5], 5: [4], 6: [7], 7: [2, 3, 6]}\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
