--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1305,52 +1305,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "source": [
-    "# n,wires=9,[[1,3],[2,3],[3,4],[4,5],[4,6],[4,7],[7,8],[7,9]]\n",
-    "n,wires=7,[[1,2],[2,7],[3,7],[3,4],[4,5],[6,7]]\n",
+    "# n,wires=9,[[1,3],[2,3],[3,4],[4,5],[4,6],[4,7],[7,8],[7,9]] #3\n",
+    "n,wires=7,[[1,2],[2,7],[3,7],[3,4],[4,5],[6,7]] #1\n",
     "def solution(n,wires):\n",
-    "    global parent\n",
-    "    graph={i+1:[] for i in range(n)}\n",
-    "    parent=[i for i in range(n+1)]\n",
-    "    # tmp=find(1)\n",
-    "    # print(graph,tmp)\n",
-    "    for a,b in wires:\n",
-    "        union(a,b)\n",
+    "    # global parent\n",
+    "    tree=edgeToTree(wires)\n",
+    "    rootCnt,answer=dfscnt(tree,wires[0][0]),int(1e9)\n",
+    "    for node in tree:\n",
+    "        answer = min(answer, abs(rootCnt-2*dfscnt(tree,node)))\n",
+    "    return answer\n",
+    "\n",
+    "def edgeToTree(edges):\n",
+    "    graph={i+1:[] for i in range(len(edges)+1)}\n",
+    "    for a,b in edges:\n",
     "        graph[a].append(b)\n",
-    "        graph[b].append(a)\n",
-    "    print(parent)\n",
-    "    print(graph)\n",
+    "        graph[b].append(a)    \n",
+    "    tree={}\n",
+    "    visited=[]\n",
+    "    stack=[edges[0][0]]\n",
+    "    while stack:\n",
+    "        now=stack.pop()\n",
+    "        if now in visited:continue\n",
+    "        visited.append(now)\n",
+    "        tree[now]=[i for i in graph[now] if i not in visited]\n",
+    "        stack.extend(graph.get(now))\n",
+    "    return tree\n",
     "\n",
-    "def find(x):\n",
-    "    if x == parent[x]:\n",
-    "        return x\n",
-    "    else:\n",
-    "        return find(parent[x])\n",
-    "        # parent[x]= find(parent[x])\n",
-    "        # return parent[x]\n",
+    "def dfscnt(tree,start):\n",
+    "    cnt=0\n",
+    "    visited=[]\n",
+    "    stack=[start]\n",
+    "    while stack:\n",
+    "        now=stack.pop()\n",
+    "        if now in visited:continue\n",
+    "        cnt+=1\n",
+    "        visited.append(now)\n",
+    "        stack.extend(tree[now])\n",
+    "    return cnt\n",
     "\n",
-    "def union(a,b):\n",
-    "    a=find(a)\n",
-    "    b=find(b)\n",
-    "    if a==b: return\n",
-    "    if a<b:\n",
-    "        parent[b]=a\n",
-    "    else:\n",
-    "        parent[a]=b\n",
     "\n",
-    "print([i for i in range(n+1)])\n",
     "solution(n,wires)"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7]\n",
-      "[0, 1, 1, 1, 1, 1, 1, 1]\n",
-      "{1: [2], 2: [1, 7], 3: [7, 4], 4: [3, 5], 5: [4], 6: [7], 7: [2, 3, 6]}\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 38
     }
    ],
    "metadata": {}
