--- a/HJ/tempWin.ipynb
+++ b/HJ/tempWin.ipynb
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "source": [
     "# https://programmers.co.kr/learn/courses/30/lessons/12904\n",
     "# 프로그래머스 가장긴펠린드롬\n",
@@ -817,18 +817,21 @@
     "def solution(s):\n",
     "    n=len(s)\n",
     "    if n==1: return 1\n",
-    "    elif ispalin(s) : return len(s)\n",
-    "    # s,e = 0,1\n",
+    "    elif ispalin2(s) : return len(s)\n",
     "    maxlen=1\n",
-    "    # p=0\n",
     "    for i in range(len(s)-1):\n",
-    "        print('i : ',i, s[i])\n",
-    "        p=1\n",
-    "        while ispalin(s[i:i+p]):\n",
-    "            print('\\tp : ',p)\n",
-    "            p+=1\n",
-    "        maxlen = max(maxlen, len(s[i:i+p]))\n",
+    "        # print(i)\n",
+    "        for j in range(i,len(s)):\n",
+    "            # print('change i , j ',i,j,s[i:j])\n",
+    "            chk=ispalin2(s[i:j])\n",
+    "            if chk>=maxlen:\n",
+    "                maxlen = chk    \n",
     "    return maxlen\n",
+    "\n",
+    "def ispalin2(ss):\n",
+    "    for i in range(len(ss)//2):\n",
+    "        if ss[i]!=ss[-1-i]: return 0\n",
+    "    return len(ss)\n",
     "\n",
     "def ispalin(ss):\n",
     "    p=0\n",
@@ -836,13 +839,13 @@
     "        if ss[p]==ss[-1-p]:\n",
     "            p+=1\n",
     "        else:\n",
-    "            return False\n",
-    "    return True\n",
+    "            return 0\n",
+    "    return len(ss)\n",
     "\n",
-    "s = 'abcdcba'\n",
+    "# s = 'abcdabdcba'\n",
     "# s = 'abacde'\n",
-    "solution(s)\n",
-    "# ispalin('aaa')\n",
+    "solution('abcabcdcbae')\n",
+    "# ispalin2('abcdcba')\n",
     "# 5//2"
    ],
    "outputs": [
@@ -854,9 +857,53 @@
       ]
      },
      "metadata": {},
-     "execution_count": 36
+     "execution_count": 30
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "#https://programmers.co.kr/learn/courses/30/lessons/82612\n",
+    "\n",
+    "def solution(price, money, count):\n",
+    "    tmp=money - price*(count*(count+1)//2)\n",
+    "    # for cnt in range(1,count+1):\n",
+    "        # money-=price*cnt \n",
+    "    return tmp\n",
+    "\n",
+    "\n",
+    "solution(3,20,4)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-10"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# https://programmers.co.kr/learn/courses/30/lessons/86052?language=python3 빛의경로사이클\n",
+    "def solution(grid):\n",
+    "    answer=[]\n",
+    "    # 동,남,서,북\n",
+    "    dx=[0,1,0,-1]\n",
+    "    dy=[1,0,-1,0]\n",
+    "    \n"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
@@ -865,8 +912,8 @@
    "hash": "fadc0cf148511e913432907e7552089c1c0a3aee5ad75d70a741eb25cd3cd508"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.0 64-bit ('codestates': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.0 64-bit ('codestates': conda)"
   },
   "language_info": {
    "codemirror_mode": {
