--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1708,6 +1708,92 @@
     "            continue\n",
     "    return time"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9534330"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numbers=[6,10,2]\n",
+    "numbers=[3,30,34,5,9]\n",
+    "from itertools import combinations,permutations\n",
+    "def solution(numbers):\n",
+    "    return sorted(list(map(lambda x : int(\"\".join(x)), permutations([str(i) for i in numbers],len(numbers)))))[-1]\n",
+    "solution(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['301', '78', '34', '30', '9', '5', '3']\n",
+      "[]\n",
+      "['78', '34', '30', '9', '5', '3']\n",
+      "['5', '34', '30', '3']\n",
+      "['30', '34']\n",
+      "[]\n",
+      "['34']\n",
+      "['3']\n",
+      "['9']\n",
+      "['301', '30', '34', '5', '3', '78', '9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=[78,3,30,301,34,5,9]\n",
+    "def solution(numbers): \n",
+    "    stnums=[str(i) for i in sorted(numbers,reverse=True)]\n",
+    "    # stnums=sorted([str(i) for i in numbers],reverse=True,key=lambda x : x[0])\n",
+    "    print(qsort(stnums))\n",
+    "\n",
+    "# solution(numbers)\n",
+    "def qsort(items):\n",
+    "    print(items)\n",
+    "    if len(items)<=1:return items\n",
+    "    l,r=0,len(items)-1\n",
+    "    while l<r:\n",
+    "        while strsort(items[0],items[l]) and l<r : l+=1\n",
+    "        while strsort(items[r],items[0]) and l<r : r-=1\n",
+    "        items[l],items[r]=items[r],items[l]\n",
+    "    items[0], items[l-1] = items[l-1], items[0]\n",
+    "    return qsort(items[:l-1])+[items[l-1]]+qsort(items[l:])\n",
+    "\n",
+    "def strsort(a,b): # a가 더  크면 1,,,, 아면 0\n",
+    "    if int(a+b) >= int(b+a):return 1\n",
+    "    else: return 0\n",
+    "    # alen=len(a)\n",
+    "    # blen=len(b)\n",
+    "    # if a[0]!=b[0] or alen==blen:\n",
+    "    #     return 1 if a>=b else 0\n",
+    "    # else:\n",
+    "    #     mlen=max(alen,blen)\n",
+    "    #     if a.ljust(mlen,a[0]) >=  b.ljust(mlen,b[0]):return 1\n",
+    "    #     else: return 0\n",
+    "\n",
+    "# sorted(['3','34','32','30'], key=strsort)\n",
+    "# qsort(['5','8','3','6','4','9'])\n",
+    "solution(numbers)\n",
+    "# qsort([5,1,8,3,6,4,9])\n",
+    "# strsort('30','301')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -1715,7 +1801,8 @@
    "hash": "f86c90f853a261887a9584a1188fabbe37e796e7f9becfe056678541a1e00140"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('codestates': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
