--- a/HJ/210404_Greedy_큰수만들기.ipynb
+++ b/HJ/210404_Greedy_큰수만들기.ipynb
@@ -1,30 +1,4 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.0-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.0 64-bit ('codestates': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "fadc0cf148511e913432907e7552089c1c0a3aee5ad75d70a741eb25cd3cd508"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
@@ -32,21 +6,29 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "['1', '2', '4', '5', '7', '8']\n\n\n['4', '1', '7', '7', '2', '5', '2', '8', '4', '1']\n['4', '7', '7', '2', '5', '2', '8', '4', '1']\n\n['4', '7', '7', '2', '5', '2', '8', '4']\n['4', '7', '7', '5', '2', '8', '4']\n\n"
+      "['1', '2', '4', '5', '7', '8']\n",
+      "\n",
+      "\n",
+      "['4', '1', '7', '7', '2', '5', '2', '8', '4', '1']\n",
+      "['4', '7', '7', '2', '5', '2', '8', '4', '1']\n",
+      "\n",
+      "['4', '7', '7', '2', '5', '2', '8', '4']\n",
+      "['4', '7', '7', '5', '2', '8', '4']\n",
+      "\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['4', '7', '7', '5', '8', '4']"
       ]
      },
+     "execution_count": 31,
      "metadata": {},
-     "execution_count": 31
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -66,9 +48,6 @@
     "        while v in ans and len(num)-len(ans) < 4:\n",
     "            print(ans)\n",
     "            ans.remove(v)\n",
-    "            \n",
-    "        \n",
-    "\n",
     "    return ans\n",
     "solution(num,k)\n",
     "\n"
@@ -80,21 +59,26 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "77252841\n\n['7', '7', '2', '5', '2', '8', '4'] 1\n\n['7', '7', '5', '2', '8', '4'] 2\n\n"
+      "77252841\n",
+      "\n",
+      "['7', '7', '2', '5', '2', '8', '4'] 1\n",
+      "\n",
+      "['7', '7', '5', '2', '8', '4'] 2\n",
+      "\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "['7', '7', '5', '2', '8', '4']"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -136,5 +120,31 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.0 64-bit ('codestates': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "fadc0cf148511e913432907e7552089c1c0a3aee5ad75d70a741eb25cd3cd508"
+    }
+   },
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0-final"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
