--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -1736,36 +1736,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['301', '78', '34', '30', '9', '5', '3']\n",
-      "[]\n",
-      "['78', '34', '30', '9', '5', '3']\n",
-      "['5', '34', '30', '3']\n",
-      "['30', '34']\n",
-      "[]\n",
-      "['34']\n",
-      "['3']\n",
-      "['9']\n",
-      "['301', '30', '34', '5', '3', '78', '9']\n"
+      "['6', '2', '10']\n",
+      "['2']\n",
+      "['10']\n",
+      "['2', '6', '10']\n",
+      "['2', '6', '10']\n",
+      "['10']\n",
+      "['6']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'6210'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 프로그래머스 가장 큰 수 (정렬 2번)\n",
     "numbers=[78,3,30,301,34,5,9]\n",
     "def solution(numbers): \n",
     "    stnums=[str(i) for i in sorted(numbers,reverse=True)]\n",
     "    # stnums=sorted([str(i) for i in numbers],reverse=True,key=lambda x : x[0])\n",
+    "    # print(\"\".join(qsort(stnums).reverse()))\n",
     "    print(qsort(stnums))\n",
+    "    return \"\".join(qsort(stnums)[::-1])\n",
     "\n",
     "# solution(numbers)\n",
     "def qsort(items):\n",
-    "    print(items)\n",
+    "    # print(items)\n",
     "    if len(items)<=1:return items\n",
     "    l,r=0,len(items)-1\n",
     "    while l<r:\n",
@@ -1773,26 +1783,88 @@
     "        while strsort(items[r],items[0]) and l<r : r-=1\n",
     "        items[l],items[r]=items[r],items[l]\n",
     "    items[0], items[l-1] = items[l-1], items[0]\n",
+    "    # print('pppprint',items[:l-1] , items[l-1] , items[l:])\n",
     "    return qsort(items[:l-1])+[items[l-1]]+qsort(items[l:])\n",
     "\n",
     "def strsort(a,b): # a가 더  크면 1,,,, 아면 0\n",
-    "    if int(a+b) >= int(b+a):return 1\n",
-    "    else: return 0\n",
-    "    # alen=len(a)\n",
-    "    # blen=len(b)\n",
-    "    # if a[0]!=b[0] or alen==blen:\n",
-    "    #     return 1 if a>=b else 0\n",
-    "    # else:\n",
-    "    #     mlen=max(alen,blen)\n",
-    "    #     if a.ljust(mlen,a[0]) >=  b.ljust(mlen,b[0]):return 1\n",
-    "    #     else: return 0\n",
+    "    # if int(a+b) >= int(b+a) : return 1\n",
+    "    # else: return 0\n",
+    "    alen=len(a)\n",
+    "    blen=len(b)\n",
+    "    if a[0]!=b[0] or alen==blen:\n",
+    "        return 1 if a>=b else 0\n",
+    "    else:\n",
+    "        mlen=max(alen,blen)\n",
+    "        if a.ljust(mlen,a[0]) >=  b.ljust(mlen,b[0]):\n",
+    "            # print(a.ljust(mlen,a[0]) , b.ljust(mlen,b[0]))\n",
+    "            return 1\n",
+    "        else: return 0\n",
     "\n",
     "# sorted(['3','34','32','30'], key=strsort)\n",
     "# qsort(['5','8','3','6','4','9'])\n",
-    "solution(numbers)\n",
+    "# solution(numbers)\n",
+    "solution(['6','10','2'])\n",
     "# qsort([5,1,8,3,6,4,9])\n",
-    "# strsort('30','301')\n",
+    "# strsort('2','6')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#프로그래머스 정렬3번 H-Index\n",
+    "# citations=[3,0,6,1,5]\n",
+    "# citations=[3,0,6,1,5,0,6,7,7,9]\n",
+    "# citations=[1,1,5,7,6]\n",
+    "citations=[5,5,5,5,5]\n",
+    "# 논문의 인용횟수를 담은 배열 , h번이상 인용된 논문이 h편이상 존재 : H-Index이고, 이 H-Index의 최댓값을 찾는것\n",
+    "def solution(arr):\n",
+    "    hdic=sorted(arr)\n",
+    "    print(hdic)\n",
+    "    i,j=0,len(arr)-1\n",
+    "    while i<j:\n",
+    "        mid=(i+j+1)//2\n",
+    "        after=len(arr)-mid\n",
+    "        before=mid+1\n",
+    "        print(f'i={i}, j={j}, mid={mid}, value : {hdic[mid]} ,|| bef : {before} , aft : {after}')\n",
+    "        if hdic[mid] > after: ## 너무큰값이라 앞으로가야함\n",
+    "            j=mid\n",
+    "        else:\n",
+    "            i=mid+1\n",
+    "    ans=hdic[i]\n",
+    "    while ans>=after:\n",
+    "        ans-=1\n",
+    "    return ans\n",
+    "    print(hdic,hdic[i])\n",
+    "    pass\n",
+    "def solution1(arr):\n",
+    "    for i in range(len(arr), 0, -1):\n",
+    "        print(i)\n",
+    "        if i <= len(list(filter(lambda x: x>=i, arr))):\n",
+    "            return i\n",
+    "    return len(arr)\n",
+    "solution1(citations)"
    ]
   }
  ],
