--- a/HJ/Algorithm/btree/Btree.ipynb
+++ b/HJ/Algorithm/btree/Btree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Start\n",
-      "level 0 , length : 1 : [5, 55], level 1 , length : 2 : [1, 11], [4, 44], level 1 , length : 2 : [6, 66], [7, 77], "
+      "level 0 , length : 1  : 2 level 1 , length : 2  : 0 1 level 1 , length : 2  : 3 4 "
      ]
     }
    ],
@@ -22,31 +22,48 @@
     "        self.keys=[]\n",
     "        self.child=[]\n",
     "    def __repr__(self):\n",
-    "        return self.keys\n",
+    "        return f'{self.keys}'\n",
     "\n",
     "class BTree:\n",
     "    def __init__(self, m):\n",
     "        self.m=m #차수\n",
-    "        self.root=Node(True)\n",
+    "        self.root=None\n",
+    "        # self.root=Node(True)\n",
     "\n",
     "    def printTree(self, node ,level=0):\n",
-    "        print(f'level {level} , length : {len(node.keys)}', end=\" : \")\n",
-    "        for i in node.keys: print(i,end=\", \")\n",
+    "        print(f'level {level} , length : {len(node.keys)} ', end=\" : \")\n",
+    "        for i in node.keys: \n",
+    "            print(i[0],end=\" \")\n",
     "        level+=1\n",
     "        if len(node.child)>0:\n",
-    "            for i in node.child: self.printTree(i, level)\n",
+    "            for i in node.child: \n",
+    "                self.printTree(i, level)\n",
     "        \n",
     "    # k : Key \n",
     "    def insert(self,k):\n",
     "        root=self.root\n",
-    "        if len(root.keys)==(2*self.m)-1 : #Maximum number of key\n",
-    "            temp=Node()\n",
-    "            self.root=temp\n",
-    "            temp.child.insert(0,root)\n",
-    "            self.split_child(temp,0)\n",
-    "            self.insert_non_full(temp,k)\n",
-    "        else: # Enough Num of key\n",
+    "        if root:\n",
     "            self.insert_non_full(root,k)\n",
+    "        else:\n",
+    "            if len(root.keys) >= self.m-1:\n",
+    "                new_root=Node(False)\n",
+    "                i = len(root.keys)-1\n",
+    "                root.append([None,None])\n",
+    "                while i>=0 and k[0]<root.keys[i][0]:\n",
+    "                    root.keys[i+1] = root.keys[i]\n",
+    "                    i-=1\n",
+    "                root.keys[i+1]=k\n",
+    "                \n",
+    "                \n",
+    "\n",
+    "        # if len(root.keys) == (2*self.m)-1 : #Maximum number of key\n",
+    "        #     temp=Node()\n",
+    "        #     self.root=temp\n",
+    "        #     temp.child.insert(0,root)\n",
+    "        #     self.split_child(temp,0)\n",
+    "        #     self.insert_non_full(temp,k)\n",
+    "        # else: # Enough Num of key\n",
+    "        #     self.insert_non_full(root,k)\n",
     "\n",
     "    def insert_non_full(self, node, k):\n",
     "        \"\"\" \n",
@@ -56,7 +73,7 @@
     "        i = len(node.keys)-1\n",
     "        if node.isleaf: \n",
     "            # 리프노드\n",
-    "            node.keys.append((None,None))\n",
+    "            node.keys.append([None,None])\n",
     "            while i>=0 and k[0] < node.keys[i][0]:\n",
     "                #한칸씩 뒤로 밀기 (i는 끝에서부터 하나씩 작아직)\n",
     "                node.keys[i+1]=node.keys[i]\n",
@@ -68,8 +85,9 @@
     "                i-=1\n",
     "            i+=1\n",
     "            #위와 동일하게 위치찾기.\n",
-    "            #만약 해당 자식의 키수가 \n",
-    "            if len(node.child[i].keys)==(2*self.m)-1:\n",
+    "            #만약 해당 자식의 키수가 m개 초과시 -> 스플릿\n",
+    "            # if len(node.child[i].keys)==(2*self.m)-1:\n",
+    "            if len(node.child[i].keys)>=self.m:\n",
     "                self.split_child(node,i)\n",
     "                if k[0] > node.keys[i][0]:\n",
     "                    i+=1\n",
@@ -93,33 +111,37 @@
     "# if __name__==\"__main__\":\n",
     "print(\"Start\")\n",
     "bt = BTree(3)\n",
-    "kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22]]\n",
-    "for i in kvs: bt.insert(i)\n",
+    "# kvs = [[1,11],[7,77],[5,55],[6,66],[4,44],[3,33],[2,22],[23,9]]\n",
+    "for i in range(10): bt.insert([i,i*2])\n",
     "bt.printTree(bt.root)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__repr__() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\IPython\\core\\formatters.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    700\u001b[0m                 \u001b[0mtype_pprinters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype_printers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    701\u001b[0m                 deferred_pprinters=self.deferred_printers)\n\u001b[1;32m--> 702\u001b[1;33m             \u001b[0mprinter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpretty\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    703\u001b[0m             \u001b[0mprinter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    704\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mstream\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\IPython\\lib\\pretty.py\u001b[0m in \u001b[0;36mpretty\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    392\u001b[0m                         \u001b[1;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    393\u001b[0m                                 \u001b[1;32mand\u001b[0m \u001b[0mcallable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'__repr__'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 394\u001b[1;33m                             \u001b[1;32mreturn\u001b[0m \u001b[0m_repr_pprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcycle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    395\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    396\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0m_default_pprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcycle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\IPython\\lib\\pretty.py\u001b[0m in \u001b[0;36m_repr_pprint\u001b[1;34m(obj, p, cycle)\u001b[0m\n\u001b[0;32m    698\u001b[0m     \u001b[1;34m\"\"\"A pprint that just redirects to the normal repr function.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    699\u001b[0m     \u001b[1;31m# Find newlines and replace them with p.break_()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 700\u001b[1;33m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrepr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    701\u001b[0m     \u001b[0mlines\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplitlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    702\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __repr__() takes 0 positional arguments but 1 was given"
-     ]
+     "data": {
+      "text/plain": [
+       "[[[1, 11], [4, 44]], [[6, 66], [7, 77]]]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bt.root"
+    "bt.root.child"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
